--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "my-app",
+  "name": "expense-tracker",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "dev": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
