--- a/package.json
+++ b/package.json
@@ -16,20 +16,21 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/bottom-tabs": "^7.0.0",
-    "@react-navigation/native": "^7.0.0",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.11",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.4",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.9",
-    "expo-splash-screen": "~0.29.13",
+    "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
+    "expo-symbols": "^0.2.2",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
     "query-string": "^9.1.1",
@@ -40,22 +41,21 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.6",
+    "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.2",
-    "sonner-native": "^0.17.0",
-    "expo-linear-gradient": "~14.0.2"
+    "sonner-native": "^0.17.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
+    "@babel/core": "^7.26.9",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.3.0",
-    "eslint": "^8.57.0",
+    "@types/react-test-renderer": "^18.3.1",
+    "eslint": "^8.57.1",
     "eslint-config-expo": "~8.0.1",
-    "jest": "^29.2.1",
+    "jest": "^29.7.0",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.3"
   },
   "private": true
 }
