trying to build apk

--- a/app.json
+++ b/app.json
@@ -37,6 +37,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "ef37e822-1570-49c8-b492-1545c1543b43"
+      }
     }
   }
 }
