--- a/package.json
+++ b/package.json
@@ -16,46 +16,49 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.11",
-    "expo-blur": "~14.0.1",
-    "expo-constants": "~17.0.3",
+    "expo": "~52.0.36",
+    "expo-blur": "~14.0.3",
+    "expo-constants": "~17.0.6",
     "expo-dev-client": "~5.0.12",
-    "expo-font": "~13.0.1",
-    "expo-haptics": "~14.0.0",
+    "expo-font": "~13.0.3",
+    "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.9",
-    "expo-splash-screen": "^0.29.22",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "^0.2.2",
-    "expo-system-ui": "~4.0.4",
-    "expo-web-browser": "~14.0.1",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
+    "expo-system-ui": "~4.0.8",
+    "expo-web-browser": "~14.0.2",
     "query-string": "^9.1.1",
-    "react": "^18.3.1",
+    "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-mmkv": "^3.2.0",
+    "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "^0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.13",
     "sonner-native": "^0.17.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.9",
-    "@types/jest": "^29.5.14",
+    "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.3.1",
+    "@types/react-test-renderer": "^18.3.0",
     "eslint": "^8.57.1",
     "eslint-config-expo": "~8.0.1",
-    "jest": "^29.7.0",
-    "jest-expo": "~52.0.2",
+    "jest": "^29.2.1",
+    "jest-expo": "~52.0.5",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.7.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
