--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "start": "expo start",
     "dev": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build-android-apk": "eas build --profile development --platform android "
   },
   "jest": {
     "preset": "jest-expo"
