--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@rn-primitives/alert-dialog": "^1.1.0",
+    "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/types": "^1.1.0",
     "dayjs": "^1.11.13",
     "expo": "~52.0.36",
     "expo-blur": "~14.0.3",
