--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@rn-primitives/alert-dialog": "^1.1.0",
+    "@rn-primitives/portal": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "expo": "~52.0.36",
     "expo-blur": "~14.0.3",
@@ -35,12 +38,14 @@
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-navigation-bar": "~4.0.8",
     "expo-router": "~4.0.19",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "lucide-react-native": "^0.483.0",
     "nativewind": "^4.1.23",
     "query-string": "^6.14.1",
     "react": "18.3.1",
@@ -54,6 +59,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "sonner-native": "^0.17.0",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
