Properly initializes react native reusable's

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,12 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strict": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./*"
-      ]
+      ], 
+      "~/*": ["*"]
     }
   },
   "include": [
